config/prow/monitoring/grafana_deployment.yaml
# PROW_INSTANCE_SPECIFIC
# Contains prow dashboards list, will be different among prow instances
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: prow-monitoring
spec:
  #keep replicas 1 unless we have a solution to
  #A. GLB BackendConfig with session affinity, or
  #B. SHARED session between replicas
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - image: docker.io/nginx:1.17.0-alpine
        name: nginx
        readinessProbe:
          httpGet:
            path: /healthy
            port: 8080
        ports:
          - containerPort: 8080
            name: nginx
        securityContext:
          allowPrivilegeEscalation: false
        volumeMounts:
          - mountPath: /etc/nginx/
            name: grafana-nginx
      - args:
        - -config=/etc/grafana/grafana.ini
        image: grafana/grafana:6.7.4
        name: grafana
        ports:
        - containerPort: 3001
          name: http
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        securityContext:
          allowPrivilegeEscalation: false
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-storage
          readOnly: false
        - mountPath: /etc/grafana/provisioning/datasources
          name: grafana-datasources
          readOnly: false
        - mountPath: /etc/grafana/provisioning/dashboards
          name: grafana-dashboards
          readOnly: false
        - mountPath: /etc/grafana
          name: grafana-config
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/prow
          name: grafana-dashboard-prow
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/deck
          name: grafana-dashboard-deck
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/ghproxy
          name: grafana-dashboard-ghproxy
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/hook
          name: grafana-dashboard-hook
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/plank
          name: grafana-dashboard-plank
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/sinker
          name: grafana-dashboard-sinker
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/slo
          name: grafana-dashboard-slo
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/tide
          name: grafana-dashboard-tide
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/cluster-rsrc-use
          name: grafana-dashboard-node-cluster-rsrc-use
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/node-rsrc-use
          name: grafana-dashboard-node-rsrc-use
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/nodes
          name: grafana-dashboard-nodes
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/nodes-darwin
          name: grafana-dashboard-nodes-darwin
          readOnly: false
      nodeSelector: {}
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 1000
        runAsGroup: 1000
      serviceAccountName: grafana
      volumes:
      - name: grafana-storage
        emptyDir: {}
      - name: grafana-datasources
        configMap:
          name: grafana-datasources
      - name: grafana-dashboards
        configMap:
          name: grafana-dashboards
      - name: grafana-config
        configMap:
          name: grafana-config
      - name: grafana-dashboard-prow
        configMap:
          name: grafana-dashboard-prow
      - name: grafana-dashboard-deck
        configMap:
          name: grafana-dashboard-deck
      - name: grafana-dashboard-ghproxy
        configMap:
          name: grafana-dashboard-ghproxy
      - name: grafana-dashboard-hook
        configMap:
          name: grafana-dashboard-hook
      - name: grafana-dashboard-plank
        configMap:
          name: grafana-dashboard-plank
      - name: grafana-dashboard-sinker
        configMap:
          name: grafana-dashboard-sinker
      - name: grafana-dashboard-slo
        configMap:
          name: grafana-dashboard-slo
      - name: grafana-dashboard-tide
        configMap:
          name: grafana-dashboard-tide
      - name: grafana-nginx
        configMap:
          name: grafana-nginx
      - name: grafana-dashboard-node-cluster-rsrc-use
        configMap:
          name: grafana-dashboard-node-cluster-rsrc-use
      - name: grafana-dashboard-node-rsrc-use
        configMap:
          name: grafana-dashboard-node-rsrc-use
      - name: grafana-dashboard-nodes
        configMap:
          name: grafana-dashboard-nodes
      - name: grafana-dashboard-nodes-darwin
        configMap:
          name: grafana-dashboard-nodes-darwin
