config/prow/monitoring/grafana_expose.yaml
# PROW_INSTANCE_SPECIFIC
# Domains are different among prow instances
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: prow-monitoring
spec:
  type: NodePort
  sessionAffinity: ClientIP
  ports:
  - name: http
    port: 3001
    targetPort: http
  - name: nginx
    port: 80
    targetPort: nginx
  selector:
    app: grafana
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
  name: grafana
  namespace: prow-monitoring
spec:
  rules:
  - host: monitoring.prow.falco.org
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: grafana
            port:
              number: 80
